; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r300.c_rv370_pcie_gart_tlb_flush.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/radeon/extr_r300.c_rv370_pcie_gart_tlb_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.radeon_device = type { i32 }

@RADEON_PCIE_TX_GART_CNTL = common dso_local global i32 0, align 4
@RADEON_PCIE_TX_GART_INVALIDATE_TLB = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @rv370_pcie_gart_tlb_flush(%struct.radeon_device* %0) #0 {
  %2 = alloca %struct.radeon_device*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.radeon_device* %0, %struct.radeon_device** %2, align 8
  store i32 0, i32* %4, align 4
  br label %5

5:                                                ; preds = %21, %1
  %6 = load i32, i32* %4, align 4
  %7 = icmp slt i32 %6, 2
  br i1 %7, label %8, label %24

8:                                                ; preds = %5
  %9 = load i32, i32* @RADEON_PCIE_TX_GART_CNTL, align 4
  %10 = call i32 @RREG32_PCIE(i32 %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @RADEON_PCIE_TX_GART_CNTL, align 4
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* @RADEON_PCIE_TX_GART_INVALIDATE_TLB, align 4
  %14 = or i32 %12, %13
  %15 = call i32 @WREG32_PCIE(i32 %11, i32 %14)
  %16 = load i32, i32* @RADEON_PCIE_TX_GART_CNTL, align 4
  %17 = call i32 @RREG32_PCIE(i32 %16)
  %18 = load i32, i32* @RADEON_PCIE_TX_GART_CNTL, align 4
  %19 = load i32, i32* %3, align 4
  %20 = call i32 @WREG32_PCIE(i32 %18, i32 %19)
  br label %21

21:                                               ; preds = %8
  %22 = load i32, i32* %4, align 4
  %23 = add nsw i32 %22, 1
  store i32 %23, i32* %4, align 4
  br label %5

24:                                               ; preds = %5
  %25 = call i32 (...) @mb()
  ret void
}

declare dso_local i32 @RREG32_PCIE(i32) #1

declare dso_local i32 @WREG32_PCIE(i32, i32) #1

declare dso_local i32 @mb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
